# sound_direction_detector

./: CMakeLists.txt  Kconfig  README.rst  prj.conf  west.yml
PDM/zephyr/: CMakeLists.txt  Kconfig
acousticSL/zephyr/: AcousticSL.c  CMakeLists.txt  Kconfig  acoustic_sl.h  doa_via_block_sparsity.c  libSoundSourceLoc.c
adv7533/zephyr/: CMakeLists.txt  Kconfig  adv7533.h
boards/: stm32f769i_disco.overlay
cmake/: gitversion.cmake
fonts/zephyr/: CMakeLists.txt  Kconfig
include/: stm32f769i_discovery_errno.h
otm8009a/zephyr/: CMakeLists.txt  Kconfig
src/: audio_application.c  audio_application.h  main.c  main.h  stm32xx_it.c  stm32xx_it.h
stm32f769i_discovery/zephyr/: CMakeLists.txt  Kconfig  stm32f769i_discovery_audio.c  stm32f769i_discovery_audio.h  stm32f769i_discovery_lcd.c  stm32f769i_discovery_lcd.h
wm8994/zephyr/: CMakeLists.txt  Kconfig  wm8994.h
zephyr/: CMakeLists.txt
